More tests, more refactors Sqlite implemenation of interfaces: SQLiteHandler, SQLiteTodoDao, SQLiteUserDao